--- a/app/templates/Env/source/styles/main.styl
+++ b/app/templates/Env/source/styles/main.styl
@@ -1,6 +1,6 @@
-@import 'vendor/normalize.css'
+@import 'vendor/sanitize.css'
 
-$fontColor = blue
+$fontColor = black
 body
   margin 0 auto
   font-size 18px
