--- a/app/templates/Env/source/templates/index.jade
+++ b/app/templates/Env/source/templates/index.jade
@@ -1,3 +1,3 @@
 extends ./layout/layout.jade
 block content
-  script(data-main="js/main",src="js/vendor/require.js",async)
+	p Welcome to Black Meza
