--- a/app/templates/Env/source/templates/layout/layout.jade
+++ b/app/templates/Env/source/templates/layout/layout.jade
@@ -6,8 +6,7 @@ html(class="no-js",lang="es")
     meta(name="description",content="")
     meta(name="viewport",content="width=device-width,initial-scale=1")
     link(href="css/main.css" rel="stylesheet")
-    // if you need it
-    //script(src="js/modernizr.js")
     title \#{pageTitle}
   body
     block content
+    script(src="js/main.js")
